<resources>
    <string name="app_name">AndroidModbusRTU</string>
    <string name="btn1">btn1</string>
    <string name="btn2">btn2</string>
    <string name="data_1">Data 1</string>
    <string name="data_3">Data 3</string>
    <string name="data_2">Data 2</string>
    <string name="textview6">TextView6</string>
    <string name="btn3">btn3</string>
    <string name="resetbtn">resetbtn</string>
    <string name="teststuff">TestStuff</string>
    <string name="sendstuff">SendStuff</string>
    <string name="receivestuff">ReceiveStuff</string>
    <string name="resetstuff">resetstuff</string>
</resources>
